// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClickableEdit common component EditView will disable the save and cancel buttons if loading is true with edit mode on 1`] = `
<Form
  as="form"
  inline={false}
>
  <Bootstrap(Row)>
    <Col
      as="div"
    >
      <FormControl
        as="input"
        className="textbox"
        disabled={true}
        isInvalid={false}
        onChange={[Function]}
        size="sm"
        type="text"
        value="foo"
      />
      <Feedback
        as="div"
        type="invalid"
      />
    </Col>
    <Col
      as="div"
      className="px-0"
      xs="auto"
    >
      <Button
        active={false}
        className="cancel-button"
        disabled={true}
        onClick={[MockFunction]}
        size="sm"
        type="button"
        variant="primary"
      >
        <MdCancel />
      </Button>
    </Col>
    <Col
      as="div"
      className="px-0"
      xs="auto"
    >
      <Bootstrap(Spinner)
        animation="border"
        className="test-loading-spinner"
        role="status"
        size="sm"
        variant="light"
      />
    </Col>
  </Bootstrap(Row)>
</Form>
`;

exports[`ClickableEdit common component EditView will render the expected initial state 1`] = `
<Form
  as="form"
  inline={false}
>
  <Bootstrap(Row)>
    <Col
      as="div"
    >
      <FormControl
        as="input"
        className="textbox"
        disabled={false}
        isInvalid={false}
        onChange={[Function]}
        size="sm"
        type="text"
        value="foo"
      />
      <Feedback
        as="div"
        type="invalid"
      />
    </Col>
    <Col
      as="div"
      className="px-0"
      xs="auto"
    >
      <Button
        active={false}
        className="cancel-button"
        disabled={false}
        onClick={[MockFunction]}
        size="sm"
        type="button"
        variant="primary"
      >
        <MdCancel />
      </Button>
    </Col>
    <Col
      as="div"
      className="px-0"
      xs="auto"
    >
      <Button
        active={false}
        className="save-button"
        disabled={false}
        onClick={[MockFunction]}
        size="sm"
        type="button"
        variant="primary"
      >
        <MdSave />
      </Button>
    </Col>
  </Bootstrap(Row)>
</Form>
`;

exports[`ClickableEdit common component EditView will render the expected validation error if edit fails 1`] = `
<Form
  as="form"
  inline={false}
>
  <Bootstrap(Row)>
    <Col
      as="div"
    >
      <FormControl
        as="input"
        className="textbox"
        disabled={false}
        isInvalid={true}
        onChange={[Function]}
        size="sm"
        type="text"
        value="foo"
      />
      <Feedback
        as="div"
        type="invalid"
      >
        Mock error
      </Feedback>
    </Col>
    <Col
      as="div"
      className="px-0"
      xs="auto"
    >
      <Button
        active={false}
        className="cancel-button"
        disabled={false}
        onClick={[MockFunction]}
        size="sm"
        type="button"
        variant="primary"
      >
        <MdCancel />
      </Button>
    </Col>
    <Col
      as="div"
      className="px-0"
      xs="auto"
    >
      <Button
        active={false}
        className="save-button"
        disabled={false}
        onClick={[MockFunction]}
        size="sm"
        type="button"
        variant="primary"
      >
        <MdSave />
      </Button>
    </Col>
  </Bootstrap(Row)>
</Form>
`;

exports[`ClickableEdit common component StaticView will hide the edit button if loading is true with edit mode off 1`] = `
<div>
  <Bootstrap(Row)>
    <Col
      as="div"
    >
      foo
    </Col>
    <Col
      as="div"
      className="px-0"
      xs="auto"
    >
      <Bootstrap(Spinner)
        animation="border"
        className="test-loading-spinner"
        role="status"
        size="sm"
        variant="light"
      />
    </Col>
  </Bootstrap(Row)>
</div>
`;

exports[`ClickableEdit common component StaticView will render the expected edit mode when edit is clicked 1`] = `
<div>
  <Bootstrap(Row)>
    <Col
      as="div"
    >
      foo
    </Col>
    <Col
      as="div"
      className="px-0"
      xs="auto"
    >
      <Button
        active={false}
        className="edit-button"
        disabled={false}
        onClick={[Function]}
        size="sm"
        type="button"
        variant="primary"
      >
        <MdEdit />
      </Button>
    </Col>
  </Bootstrap(Row)>
</div>
`;

exports[`ClickableEdit common component StaticView will render the expected initial state 1`] = `
<div>
  <Bootstrap(Row)>
    <Col
      as="div"
    >
      foo
    </Col>
    <Col
      as="div"
      className="px-0"
      xs="auto"
    >
      <Button
        active={false}
        className="edit-button"
        disabled={false}
        onClick={[Function]}
        size="sm"
        type="button"
        variant="primary"
      >
        <MdEdit />
      </Button>
    </Col>
  </Bootstrap(Row)>
</div>
`;

exports[`ClickableEdit common component will render the expected edit mode when edit is clicked 1`] = `
<EditView
  currentText="foo"
  errorMessage={null}
  loading={false}
  onCancel={[Function]}
  onSave={[Function]}
  setCurrentText={[Function]}
/>
`;

exports[`ClickableEdit common component will render the static view by default 1`] = `
<StaticView
  loading={false}
  setEditing={[Function]}
  text="foo"
/>
`;
